--- a/root/backend/package.json
+++ b/root/backend/package.json
@@ -21,6 +21,7 @@
     "bcrypt": "^5.1.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
+    "msnodesqlv8": "^4.1.2",
     "mssql": "^9.1.3"
   },
   "devDependencies": {
